--- a/predictivemodelling.qmd
+++ b/predictivemodelling.qmd
@@ -420,7 +420,7 @@ plot_response_curves(
 
 Borcard and Legendre developed an approach called the Principal Coordinates of Neighbour Matrices (PCNM) to create spatial predictors that can be incorporated into models. Dray and Legendre further \[2006\] improved mathematical foundations of PCNM and investigated its close relation to Moran's index of spatial autocorrelation (Moran's I). They proposed a Moran's eigenvector approach which extracts Moran's Eigenvector Maps (MEMs) from the spatial weighting matrix.
 
-The spatial weight matrix, denoted as W=\[ $w_i$\]\[ $_j$\] , is an n×n matrix that represents the spatial relationships between different locations of n observations in the dataset. Each entry in the matrix represents the spatial relationship between location i and location j. The centering operator H subtracts the mean of each row and column from the elements of W, resulting in a doubly-centred weight matrix, Ω, where the row and column means are zero. By diagonalising this doubly-centred weight matrix Ω, eigenvectors obtained are orthogonal vectors with a unit norm that maximise Moran's *I*. These eigenvectors are called Moran's Eigenvector Maps (MEMs). The eigenvalues of MEMs are equal to the Moran's I coefficients of spatial autocorrelation and describe the local structures of the observations in the dataset.
+The spatial weight matrix, denoted as W= $w_i$ $_j$ , is an n×n matrix that represents the spatial relationships between different locations of n observations in the dataset. Each entry in the matrix represents the spatial relationship between location i and location j. The centering operator H subtracts the mean of each row and column from the elements of W, resulting in a doubly-centred weight matrix, Ω, where the row and column means are zero. By diagonalising this doubly-centred weight matrix Ω, eigenvectors obtained are orthogonal vectors with a unit norm that maximise Moran's *I*. These eigenvectors are called Moran's Eigenvector Maps (MEMs). The eigenvalues of MEMs are equal to the Moran's I coefficients of spatial autocorrelation and describe the local structures of the observations in the dataset.
 
 $Ω=HWH=(I-11^t/n) W (I-11^t/n)$
 
