--- a/predictivemodelling.qmd
+++ b/predictivemodelling.qmd
@@ -4515,7 +4515,7 @@ tm_shape(kpred) +
             legend.height = 0.45, 
             legend.width = 0.35,
             frame = TRUE) +
-  tm_compass(type="8star", size = 2) +
-  tm_scale_bar() +
+ #tm_compass(type="8star", size = 2) +
+ #tm_scale_bar() +
   tm_grid(alpha =0.2)
 ```
