--- a/index.qmd
+++ b/index.qmd
@@ -14,11 +14,11 @@ As a result, landslide susceptibility modeling has emerged as a timely and cruci
 
 In this project, presented by **Khant Min Naing** and **Victoria Grace Ann** from *Singapore Management University*, we explore the potential of integrating spatial properties into generalised statistical and machine learning based landslide models. Using Valtellina Valley in Italy as a case study, this study developed and trained three spatial landslide models, **Geographically Weighted Logistic Regression (GWLR)**, **Moran's Eigenvector Random Forest (MERF)** and **Geographically Weighted Random Forest (GWRF)** and proposes an I**ntegrated Dual Geographical Random Forest Framework (Dual GRF)** leveraging on MERF and GWRF. The findings demonstrate that spatial models outperform global baseline models and result in more spatially-adaptive landslide risk predictions and interpretations.
 
-::: {style="color: #603494;"}
-#### Conference Presentation and Publications {style="color: #603494;"}
-:::
+#### Academic Recognition {style="color: #603494;"}
 
 This project has achieved significant academic recognition, resulting in two peer-reviewed publications. Additionally, the findings have been presented at two prestigious academic conferences, renowned within the fields of computational science and geospatial information systems. These accomplishments highlight the project's contribution to advancing knowledge and its impact on the academic community.
+
+#### Conference Presentations {style="color: #603494;"}
 
 +---------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------+
 | [![](images/images.png){fig-align="center" width="141"}](https://2024.iccsa.org/)                       | **24th International Conference on Computational Science and its Applications**                       |
@@ -32,4 +32,8 @@ This project has achieved significant academic recognition, resulting in two pee
 |                                                                                                         | Atlanta, GA, USA                                                                                      |
 +---------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------+
 
-#### 
+#### Publications {style="color: #603494;"}
+
+1.  Khant Min Naing, Victoria Grace Ann and Tin Seong Kam. 2024. From Data to Application: Harnessing Big Spatial Data and Spatially Explicit Machine Learning Model for Landslide Susceptibility Prediction and Mapping. In *The 12th ACM SIGSPATIAL International Workshop on Analytics for Big Geospatial Data (BigSpatial '24), October 29, 2024, Atlanta, GA, USA*. ACM, New York, NY, USA. DOI:http://dx.doi.org/10.1145/3681763.3698477 
+
+2.  Khant Min Naing, Victoria Grace Ann, and Tin Seong Kam. 2024. Is There a Space in Landslide Susceptibility Modeling: Case Study of Valtellina Valley in Italy. In *Osvaldo Gervasi, Beniamino Murgante, Chiara Garau, David Taniar, Ana Maria A. C. Rocha, Maria Noelia Faginas Lago, eds. Computational Science and Its Applications -- ICCSA 2024. ICCSA 2024. Lecture Notes in Computer Science 14813* (2024), 221--238. DOI:http://dx.doi.org/10.1007/978-3-031-64605-8_16   
