--- a/methodology.qmd
+++ b/methodology.qmd
@@ -1,79 +1,75 @@
-## Explanatory and Predictive Landslide Susceptibility Modelling Using Statistical and Machine Learning Techniques: Case Study of Valtellina Valley, Italy
+## Research Methodology
 
-### 1.0 Overview
+### 1.0 Existing Methodology Approaches
 
 Landslide susceptibility assessment is an emerging research area of both importance and urgency and several approaches and models have been explored in scientific literature. These models can be generally categorized into four categories: expert-based, physically-based, statistical and machine learning-based.
 
--   Physically-based models are of the highest utility in theory \[d\], but such models often face challenges and uncertainties for real-world application due to the limited availability of spatially differentiated geotechnical data.
+-   Physically-based models are of the highest utility in theory, but such models often face challenges and uncertainties for real-world application due to the limited availability of spatially differentiated geotechnical data.
 
--   Compared to physically-based models, expert-based models are less data-intensive as they are developed with the expert knowledge of local interactions between landslide occurrences and its controlling factors (Steger et al., 2019). Due to its qualitative nature, expert-based models often lack objectivity and reproducibility, and are not commonly used in scientific research.
+-   Compared to physically-based models, expert-based models are less data-intensive as they are developed with the expert knowledge of local interactions between landslide occurrences and its controlling factors. Due to its qualitative nature, expert-based models often lack objectivity and reproducibility, and are not commonly used in scientific research.
 
--   Statistical landslide susceptibility modelling seeks to estimate the spatial likelihood or relative spatial probability of spatial units to coincide with future landslide occurrence (Steger et al., 2019). These models have been widely adopted for practical application due to their relatively lower input data demand (than physically based models) and quantitative modelling output (which expert-based models lack).
+-   Statistical landslide susceptibility modelling seeks to estimate the spatial likelihood or relative spatial probability of spatial units to coincide with future landslide occurrence. These models have been widely adopted for practical application due to their relatively lower input data demand (than physically based models) and quantitative modelling output (which expert-based models lack).
 
--   Machine learning models have emerged as promising alternatives to statistical-driven models due to their flexibility and potential for high predictive accuracy.
+-   Machine learning models have emerged as promising alternatives to statistical models due to their flexibility and high predictive accuracy. They are favored for their ability to solve nonlinear problems, improve performance across various classifiers, and capture complex relationships between variables.
 
-Nevertheless, previous research has demonstrated that each model type has its unique strengths and limitations, and choosing an appropriate model depends largely on various factors, such as interpretability, generalizability, and the specific research objectives.
+Nevertheless, previous research has demonstrated that each model type has its unique strengths and limitations, and choosing an appropriate model depends largely on various factors, such as interpretability, generalisability, and the specific research objectives.
 
-Our study focuses on comparing the performance and applications of statistical and machine learning models in landslide susceptibility assessment.
+### 2.0 Spatial Nonstationarity and Spatial Heterogeneity
 
--   **Precition Task:** The first part involves using both approaches to predict landslide susceptibility through binary classification (landslide presence/absence). We will explore and evaulate whether data mining and machine learning methods perform better than stati
+Many models using large spatial datasets for landslide risk prediction often overlook spatial nonstationarity. This occurs when global models assume uniformity in variable relationships across space, ignoring local variations. Failing to address spatial nonstationarity limits a model\'s ability to capture spatial autocorrelation, where nearby values are more similar than those farther apart. Consequently, such models lack adaptability to inherent spatial properties, potentially affecting their accuracy and applicability in complex environments.
 
--   **Analytical Task**: Subsequently, the explanatory variables will be evaluated through global and local statistical models to understand the influence and significance of different landslide predisposing factors. We will identify (i) landform properties and (ii) human-environment interaction factors affecting landslide susceptibility results. We will also examine whether susceptibility is geospatially independent.
+In 1996, Fotheringham, Charlton, and Brunson highlighted the impact of spatial nonstationarity on regression parameter estimates in geospatial datasets. They argued that relying on a global estimate of relationships can obscure important geographical variations within the data. Models not calibrated to underlying spatial properties often produce less realistic inferences and overlook underlying spatial structures. This issue, known as spatial nonstationarity, arises when a global model cannot accurately represent the relationships between variables due to local spatial variations, violating the assumption that these relationships remain constant across space.
 
-The differentiation between spatial prediction tasks and analytical tasks provides comprehensive review of the model performance and applications.
+### 3.0 Research Objectives
 
-### 2.0 Using Statistical Models for Landslide Susceptibility
+Our study focuses on comparing the performance and applications of statistical and machine learning models in landslide susceptibility assessment. In particular, our study compares **global models** and **their spatial derivatives** in incorporating spatial relationships into landslide susceptibility modeling, guided by two key questions.
 
-#### Geographically Weighted Regression, GWR
+#### 3.1 Explanatory Modelling
 
-In practice, relationships between variables may be nonstationary. However, traditional regression models assume that predictors and outcome variables are spatially homogeneous, or stationary.
+1.  What are the (i) landform properties and (ii) human-environment interaction factors affecting landslide susceptibility? Is landslide susceptibility independent geospatially?
 
-Ordinary least squares (OLS) linear regression is a standard global modelling technique that cannot detect nonstationarity, and thus using it may obscure regional variation in the relationships between predictors and the outcome variable.
+2.  Is landslide susceptibility independent geospatially?
 
-GWR extends the ordinary least-sqaures regression framework by allowing local rather than global parameters to be estimated. That is, we allow a continuous surface of parameter values, and measurements of this surface are taken at certain points to denote the spatial variability of the surface. Thus, GWR accounts for spatial variations in relationships might exist and provides a way in which they can be measured. 
+3.  Does the contribution landslide factors vary across the study area?
 
-**Spatial Weights**
+#### 3.2 Predictive Modelling
 
-Spatial weights are a key component in any cross-sectional analysis of spatial dependence. They are an essential element in the construction of spatial autocorrelation statistics, and provide the means to create spatially explicit variables, such as spatially lagged variables and spatially smoothed rates. Formally, the weights express the neighbour structure between the observations as a n×n matrix, in which the elements w~ij~ of the matrix are the spatial weights.
+1.  How can spatial relationships and local dependencies be accounted in generalised statistical and machine learning models?
 
-### 3.0 Using Machine Learning Models for Landslide Susceptibility
-
-## *Strengths*
-
-Using machine learning models like Frequency Ratio (FR) and Analytic Hierarchy Process (AHP) can facilitate the adoption of appropriate mitigation measures against landslides (Goswami et al., 2023).
-
-ML models have been favoured for its ability to solve nonlinear problems, improve predictive performance across various classifiers (Song et al., 2023) and capture non-linear relationships between variables (Achu et al., 2023).
-
-The compounding effect of ML models is that they can combine the predictions of multiple ML techniques which can improve the robustness and reliability of landslide susceptibility maps (Achu et al., 2023).
-
-## *Concerns*
-
-Despite its strengths, the performance of machine learning models can be affected by sample imbalances when landslide samples are much smaller than non-landslide samples, which can cause low recall rates and decreased predictive ability for landslide samples.
-
-Furthermore, machine learning models are at risk of poorer performance when faced with new or unseen data that differs significantly from the training data.
-
--   Temporal Differences: Training data collected at different time periods than the new data lead to variations in environmental conditions, demographics and other factors that can affect relationships (Yao et al., 2023).
-
--   Spatial Differences: When training data is collected from a specific location, new data from a different region with different characteristics and landslide distributions can challenge established underlying relationships (Yao et al., 2023).
-
-Particularly in landslide identification, machine learning models are lacking in the identification of landslide types and digital terrain model dominant landslide identification using machine learning has not been explored.
+2.  Do spatially-calibrated models perform better predictions than generalised baseline models?
 
 ### 4.0 Research Design
 
-![](images/Screenshot%202024-04-16%20at%207.48.44%20PM.png)
+![](images/GeoFest3.png)
 
-### 5.0 References
+### 5.0 Model Overview
 
--   Cascini, L.: Applicability of landslide susceptibility and hazard zoning at different scales. Engineering Geology. 102, 164--177 (2008).
+#### 5.1 Geographically Weighted Regression (GWR)
 
--   Frattini, P., Crosta, G., Carrara, A.: Techniques for evaluating the performance of landslide susceptibility models. Engineering Geology. 111, 62--72 (2010).
+In practice, relationships between variables may be nonstationary. However, traditional regression models assume that predictors and outcome variables are spatially homogeneous, or stationary.
 
--   Guzzetti, F., Carrara, A., Cardinali, M., Reichenbach, P.: Landslide hazard evaluation: A review of current techniques and their application in a multi-scale study, Central Italy. Geomorphology. 31, 181--216 (1999).
+Ordinary least squares (OLS) linear regression is a standard global modelling technique that cannot detect nonstationarity, and thus using it may obscure regional variation in the relationships between predictors and the outcome variable.Geographically Weighted Regression (GWR) is a local regression framework proposed by Fotheringham, Charlton and Brunson. This model is suited for spatial analysis as it extends traditional and global regression frameworks such as Ordinary Least Squares (OLS) by integrating spatial weights and generating local-level model statistics.
 
--   Kuriakose, S.L., van Beek, L.P., van Westen, C.J.: Parameterizing a physically based shallow landslide model in a data poor region. Earth Surface Processes and Landforms. 34, 867--881 (2009).
+#### 5.2 Moran's Eigenvector Random Forest (MERF)
 
--   Ruff, M., Czurda, K.: Landslide susceptibility analysis with a heuristic approach in the eastern alps (Vorarlberg, Austria). Geomorphology. 94, 314--324 (2008).
+Building upon the concept of Moran's Eigenvector Maps (MEMs), Benito introduced a spatial RF model incorporating spatial dependency. This model, termed Moran's Eigenvector Random Forest (MERF) in this study, first generates MEMs from a weight matrix. MEMs have two important properties. First, they are orthogonal unit vectors that maximize Moran's I, a measure of spatial autocorrelation. Second, their associated eigenvalues are equal to the Moran's I coefficients, describing the strength of local spatial structures. MERF hence uses MEMs as variables of spatial predictors when fitting a standard, non-spatial RF model. Directly incorporating these spatial predictors during model training enables MERF to integrate underlying spatial dependence in the data that a standard, nonspatial global RF would otherwise ignore. Chiefly, the MERF model allows RF to learn patterns related to spatial autocorrelation that would improve its ability to model spatially structured phenomena like landslides.
 
--   Steger, S., Kofler, C.: Statistical Modeling of Landslides: Landslide Susceptibility and Beyond. In: Pourghasemi, H.R. and Gokceoglu, C. (eds.) Spatial modeling in GIS and R for earth and environmental sciences. pp. 519--546. Elsevier, Amsterdam, Netherlands (2019).
+#### 5.3 Geographically Weighted Random Forest (GWRF)
 
--   van Westen, C.J., Rengers, N. & Soeters, R. Use of Geomorphological Information in Indirect Landslide Susceptibility Assessment. Natural Hazards 30, 399--419 (2003).  
+Proposed by Georganos and Kalogirou, GWRF is the spatial disaggregation of the classic RF model into an ensemble of local models. This formulation is based on the principles of the Geographically Weighted Regression (GWR) framework wherein a global process is decomposed into several local submodels. This methodology implies that spatial interactions are more effectively captured through an ensemble of local models rather than incorporating numerous spatial predictors into a single global model, as seen in the MERF approach.
+
+### 6.0 References
+
+1.  Cascini, L.: Applicability of landslide susceptibility and hazard zoning at different scales. Engineering Geology. 102, 164--177 (2008).
+
+2.  Frattini, P., Crosta, G., Carrara, A.: Techniques for evaluating the performance of landslide susceptibility models. Engineering Geology. 111, 62--72 (2010).
+
+3.  Guzzetti, F., Carrara, A., Cardinali, M., Reichenbach, P.: Landslide hazard evaluation: A review of current techniques and their application in a multi-scale study, Central Italy. Geomorphology. 31, 181--216 (1999).
+
+4.  Kuriakose, S.L., van Beek, L.P., van Westen, C.J.: Parameterizing a physically based shallow landslide model in a data poor region. Earth Surface Processes and Landforms. 34, 867--881 (2009).
+
+5.  Ruff, M., Czurda, K.: Landslide susceptibility analysis with a heuristic approach in the eastern alps (Vorarlberg, Austria). Geomorphology. 94, 314--324 (2008).
+
+6.  Steger, S., Kofler, C.: Statistical Modeling of Landslides: Landslide Susceptibility and Beyond. In: Pourghasemi, H.R. and Gokceoglu, C. (eds.) Spatial modeling in GIS and R for earth and environmental sciences. pp. 519--546. Elsevier, Amsterdam, Netherlands (2019).
+
+7.  van Westen, C.J., Rengers, N. & Soeters, R. Use of Geomorphological Information in Indirect Landslide Susceptibility Assessment. Natural Hazards 30, 399--419 (2003).  
